Add role based authentication and refresh token