@@ -6,15 +6,18 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.AllArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
+import sn.ndiaye.bookstore.users.Role;
 import sn.ndiaye.bookstore.users.UserNotFoundException;
 import sn.ndiaye.bookstore.users.UserRepository;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @AllArgsConstructor
 @Component
@@ -44,9 +47,9 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
 
         var authentication = new UsernamePasswordAuthenticationToken(
-                user.getId(),
+                userId,
                 null,
-                Collections.emptyList()
+                List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole()))
         );
 
         authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
